examples/test/testpolicy17618.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17618
  namespace: namespace206
spec:
  podSelector:
    matchLabels:
      key17: value15
      key34: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value12
          key35: value44
      podSelector:
        matchLabels:
          key38: value46
